--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -24,7 +24,7 @@
 </section>
 
 <footer class="main" id="f1">
-<a href="http:/es.wikipedia.org/wiki/Quiz">
+<a href="https://es.wikipedia.org/wiki/Quiz">
 ¿Que es un Quiz?
 </a>
 </footer>
