--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -17,16 +17,18 @@
 </header>
 <span><a href="/" >Inicio </a></span>
 <span><a href="/quizes/question" >Preguntas </a></span>
+<span><a href="/author" >Autor </a></span>
 </nav>
 
 <section class="main" id="s1">
 <%- body %>
 </section>
-
 <footer class="main" id="f1">
 <a href="https://es.wikipedia.org/wiki/Quiz">
 ¿Que es un Quiz?
 </a>
+<p>
+<a href="https://github.com/SergioMorenoFernandez/quiz-sergio">Link a proyecto en GIT</a>
 </footer>
 </div>
 </body>
