--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -16,7 +16,7 @@
 <h2>Quiz: el juego de las preguntas</h2>
 </header>
 <span><a href="/" >Inicio </a></span>
-<span><a href="/quizes/question" >Preguntas </a></span>
+<span><a href="/quizes/" >Preguntas </a></span>
 <span><a href="/author" >Autor </a></span>
 </nav>
 
