--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -16,12 +16,20 @@
 <h2>Quiz: el juego de las preguntas</h2>
 </header>
 <span><a href="/" >Inicio </a></span>
-<span><a href="/quizes/" >Preguntas </a></span>
+<span><a href="/quizes" >Preguntas </a></span>
 <span><a href="/author" >Autor </a></span>
 </nav>
 
 <section class="main" id="s1">
-<%- body %>
+
+<% if (errors.length){ %>
+<span id="ErrorMsgs"> Corregir errores: <br/>
+<% for (var i in errors) { %>
+<span><%= errors[i].message %> </span> <br/>
+<% } %>
+</span>
+<% } %>
+<div><%- body %></div>
 </section>
 <footer class="main" id="f1">
 <a href="https://es.wikipedia.org/wiki/Quiz">
