--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,3 +8,7 @@ section > div {padding: : 20px;}
 header, nav, section,footer {background: #eee; text-align: center; }
 nav span	{margin: 0px 10px 0px 0px;}
 #ErrorMsgs	{color: #f61; font-size: smaler;}
+
+table, th, td {
+   border: 1px solid black;
+} 
