--- a/views/quizes/_form.ejs
+++ b/views/quizes/_form.ejs
@@ -1,6 +1,7 @@
 <label for="preg" class="rem"> Pregunta: </label>
-<input type="text" id="preg" name="quiz[pregunta]" value="<% quiz.pregunta %>"/> <p>
-<label for="resp" class="rem"> Pregunta: </label>
-<input type="text" id="resp" name="quiz[rspuesta]" value="<% quiz.respuesta %>"/> <p>
+<input type="text" id="preg" name="quiz[pregunta]" value="<%= quiz.pregunta %>"/> <p>
+
+<label for="resp" class="rem"> Repuesta: </label>
+<input type="text" id="resp" name="quiz[respuesta]" value="<%= quiz.respuesta %>"/> <p>
 <a href="/quizes"> <button type="button">Cancelar</button></a>
 <input type="submit" value="Guardar"></button>
