--- a/views/quizes/edit.ejs
+++ b/views/quizes/edit.ejs
@@ -1,5 +1,5 @@
 Editar Pregunta: <p>
 
-<form method="post" action="/quizes/<% quiz.id %>?_method=put" >
+<form method="post" action="/quizes/<%= quiz.id %>?_method=put" >
 <% include _form.ejs %>
 </form>
