--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -1,16 +1,20 @@
 <table>
+<tr>
+	<td>Pregunta</td>
+	<td>Respuesta</td>
+</tr>
 <% var i; for (i=0;i <quizes.length; i++){ %>
-<tr><td><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td></tr>
 
-    <tr>
-      <td><a href="/quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta%></a></td>
-      <td><a href="/quizes/<%= quizes[i].id %>/edit"><button>editar</button></a></td>
-      <td>
-      	<form method="post" action="quizes/<%= quizes[i].id %>?_method=delete">
-      		<button type="submit" onclick="return confirm('Borrar: <% quizes[i].pregunta %>');">Borrar</button>
-      	</form>
-      </td>      
-    </tr>
+	<tr>
+		<td><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td>
+      	<td><a href="/quizes/<%= quizes[i].id %>"><%= quizes[i].respuesta%></a></td>
+      	<td><a href="/quizes/<%= quizes[i].id %>/edit"><button>editar</button></a></td>
+      	<td>
+      		<form method="post" action="quizes/<%= quizes[i].id %>?_method=delete">
+      			<button type="submit" onclick="return confirm('Borrar: <%= quizes[i].pregunta %>');">Borrar</button>
+      		</form>
+      	</td>      
+    	</tr>
 <% } %>
 </table><p>
 <a href="/quizes/new"><button type="button">Crear Pregunta</button></a>
