--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -1,11 +1,13 @@
 <table>
 <tr>
+	<td>Tema</td>
 	<td>Pregunta</td>
 	<td>Respuesta</td>
 </tr>
 <% var i; for (i=0;i <quizes.length; i++){ %>
 
 	<tr>
+		<td><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].tema %></a></td>
 		<td><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td>
       	<td><a href="/quizes/<%= quizes[i].id %>"><%= quizes[i].respuesta%></a></td>
       	<td><a href="/quizes/<%= quizes[i].id %>/edit"><button>editar</button></a></td>
