Añadir busqueda en las preguntas

--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -1,3 +1,10 @@
+<form method="get" action="/quizes">
+  <p>Introduce el texto que quieras buscar:
+    <input type="text" name="search" value="" />
+    <input type="submit" value="Buscar"/>
+  </p>
+</form>
+
 <table>
 <tr>
 	<td>Tema</td>
