Add time to session

--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -9,21 +9,23 @@
 <tr>
 	<td>Tema</td>
 	<td>Pregunta</td>
-	<td>Respuesta</td>
 </tr>
 <% var i; for (i=0;i <quizes.length; i++){ %>
 
 	<tr>
 		<td><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].tema %></a></td>
 		<td><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td>
-      	<td><a href="/quizes/<%= quizes[i].id %>"><%= quizes[i].respuesta%></a></td>
+      <% if(session.user) { %>
       	<td><a href="/quizes/<%= quizes[i].id %>/edit"><button>editar</button></a></td>
       	<td>
       		<form method="post" action="quizes/<%= quizes[i].id %>?_method=delete">
       			<button type="submit" onclick="return confirm('Borrar: <%= quizes[i].pregunta %>');">Borrar</button>
       		</form>
-      	</td>      
+      	</td>
+        <% } %>      
     	</tr>
 <% } %>
 </table><p>
+<% if(session.user) { %>
 <a href="/quizes/new"><button type="button">Crear Pregunta</button></a>
+<% } %>
