--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -23,9 +23,11 @@
 
 <h2>Quiz: el juego de las preguntas</h2>
 </header>
-<span><a href="/" >Inicio </a></span>
-<span><a href="/quizes" >Preguntas </a></span>
-<span><a href="/author" >Autor </a></span>
+<nav> 
+	<span><a href="/" >Inicio </a></span>
+	<span><a href="/quizes" >Preguntas </a></span>
+	<span><a href="/author" >Autor </a></span>
+    <span><a href="/quizes/statistics">Estadísticas</a></span>
 </nav>
 
 <section class="main" id="s1">
